--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   letter-spacing: 0.03em;
+  color: var(--primary-text-color);
 }
 a {
   text-decoration: none;
@@ -20,7 +21,6 @@ a {
   font-size: 26px;
   line-height: 1.19;
   color: #2196f3;
-  /* color: #000000; */
 }
 .logo-color-light {
   color: #000;
@@ -48,6 +48,7 @@ a {
 .contact .link {
   font-weight: 500;
   font-size: 14px;
+  font-style: normal;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
@@ -78,21 +79,43 @@ a {
   letter-spacing: 0.06em;
   color: #ffffff;
   background-color: #2196f3;
+  cursor: pointer;
 }
 .button.primary:focus,
 .button.primary:hover {
   background-color: #188ce8;
 }
+/* Buttons Portfolio */
+.botton-portfolio {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  color: var(--primary-text-color);
+  background-color: #f5f4fa;
+  cursor: pointer;
+}
+.botton-portfolio.active {
+  color: #ffffff;
+  background-color: var(--hover-color);
+}
+/* .botton-portfolio:active {
+  color: #ffffff;
+  background-color: var(--hover-color);
+} */
+.botton-portfolio:focus,
+.botton-portfolio:hover {
+  background-color: var(--hover-color);
+}
+
 /* Benefits */
 .benefits .title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  color: var(--primary-text-color);
 }
 .benefits .text {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   color: var(--secondary-text-color);
@@ -111,17 +134,14 @@ a {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  color: var(--primary-text-color);
 }
 .team-list .title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
-  color: var(--primary-text-color);
 }
 .team-list .text {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
@@ -135,8 +155,23 @@ a {
   background-color: #2f303a;
 }
 .real-address {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
+  font-style: normal;
   color: #ffffff;
+}
+
+/* Portfolio */
+.portfolio .title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--primary-text-color);
+}
+
+.portfolio .text {
+  font-size: 16px;
+  line-height: 1.88;
+  color: var(--secondary-text-color);
 }
