--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ a {
 }
 /* Buttons */
 .button.primary {
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -87,6 +88,7 @@ a {
 }
 /* Buttons Portfolio */
 .botton-portfolio {
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
@@ -159,6 +161,17 @@ a {
   line-height: 1.71;
   font-style: normal;
   color: #ffffff;
+}
+.contact-footer .link {
+  font-weight: 400;
+  font-size: 14px;
+  font-style: normal;
+  line-height: 1.71;
+  color: rgba(255, 255, 255, 0.6);
+}
+.contact-footer .link:hover,
+.contact-footer .link:focus {
+  color: var(--hover-color);
 }
 
 /* Portfolio */
